--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,9 @@
-gensim
-numpy
-openai
-pandas
-scikit-learn
-scipy==1.12.0 # must use 1.12.0 because 1.13 and above is not compatible with current version of gensim (4.3.2)
-torch
-tqdm
-# transformers
-datasets 
-loralib 
-sentencepiece
-bitsandbytes
-
-
-
-
-Robert Trygstad <rtrygsta@asu.edu>
-Nicole Hansel <nhansel@asu.edu>
-Julie Reid <jjreid1@asu.edu>
-
-https://www.when2meet.com/?26868063-HjTvL
+pandas>=1.3.0
+numpy>=1.20.0
+scikit-learn>=1.0.0
+transformers>=4.18.0
+torch>=1.10.0
+gensim>=4.1.2
+nltk>=3.6.5
+tqdm>=4.62.3
+python-dotenv>=0.19.2
